Camel-based triplestore implementation